samples/_failures_safe/1761493062_1dd995_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2cae1759.c: In function ‘main’:
./samples/SAFE/__tmp_2cae1759.c:163:41: error: expected ‘)’ at end of input
  163 |         if (scanf("%d %d %d", &from, &to
      |                  ~                      ^
      |                                         )
./samples/SAFE/__tmp_2cae1759.c:163:9: error: expected declaration or statement at end of input
  163 |         if (scanf("%d %d %d", &from, &to
      |         ^~
./samples/SAFE/__tmp_2cae1759.c:163:9: error: expected declaration or statement at end of input
